--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
 
   <!-- Slider -->
   <div class="slider-hero" aria-hidden="false">
-    <img src="assets/slide1.jpg" alt="Slide 1">
-    <img src="assets/slide2.jpg" alt="Slide 2">
+    <img src="assets/thinkit.jpeg" alt="Slide 1">
+    <img src="assets/thinkit2.jpeg" alt="Slide 2">
     <img src="assets/slide3.jpg" alt="Slide 3">
     <img src="assets/slide4.jpg" alt="Slide 4">
   </div>
