--- a/index.html
+++ b/index.html
@@ -229,8 +229,13 @@
 
   <!-- Slider -->
   <div class="slider-hero" aria-hidden="false">
-    <img src="assets/thinkit.jpeg" alt="Slide 1">
-    <img src="assets/thinkit2.jpeg" alt="Slide 2">
+     <a href="https://docs.google.com/forms/d/e/1FAIpQLScAmrgT1u8O3_6HVsZ2DCmKdIZd3jKo2nFHOGTjXUOYNSAPTw/viewform">
+    <img src="assets/thinkit.jpeg" alt="Think it Summit">
+  </a>
+
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdiCgYE-liW0OMZv0MnLteqD8qzvF5FWq2gUFvcAVvp60gihA/viewform">
+    <img src="assets/thinkit2.jpeg" alt="Think it Summit">
+  </a>
     <img src="assets/slide3.jpg" alt="Slide 3">
     <img src="assets/slide4.jpg" alt="Slide 4">
   </div>
