--- a/index.html
+++ b/index.html
@@ -235,8 +235,10 @@
   <a href="https://docs.google.com/forms/d/e/1FAIpQLSdiCgYE-liW0OMZv0MnLteqD8qzvF5FWq2gUFvcAVvp60gihA/viewform">
     <img src="assets/thinkit2.jpeg" alt="Think it Summit">
   </a>
+  <a href="#">
+
     <img src="assets/slide3.jpg" alt="Slide 3">
-    <img src="assets/slide4.jpg" alt="Slide 4">
+  </a>
   </div>
 
   <!-- Mission/Content -->
