--- a/index.html
+++ b/index.html
@@ -123,27 +123,36 @@
     .overlay.show { opacity: 1; pointer-events: auto; }
 
     /* Slider hero */
-    .slider-hero {
-      position: relative;
-      overflow: hidden;
-      height: min(60vh, 720px);
-      max-height: 800px;
-    }
-    .slider-hero img {
-      position: absolute;
-      inset: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      object-position: center;
-      opacity: 0;
-      animation: slideShow 16s infinite;
-      backface-visibility: hidden;
-    }
-    .slider-hero img:nth-child(1){ animation-delay: 0s; }
-    .slider-hero img:nth-child(2){ animation-delay: 4s; }
-    .slider-hero img:nth-child(3){ animation-delay: 8s; }
-    .slider-hero img:nth-child(4){ animation-delay: 12s; }
+.slider-hero {
+  position: relative;
+  overflow: hidden;
+  height: min(60vh, 720px);
+  max-height: 800px;
+}
+
+/* Each anchor is a slide */
+.slider-hero a {
+  position: absolute;
+  inset: 0;
+  display: block;
+  opacity: 0;
+  animation: slideShow 16s infinite;
+}
+
+/* Animate anchors, NOT images */
+.slider-hero a:nth-child(1){ animation-delay: 0s; }
+.slider-hero a:nth-child(2){ animation-delay: 4s; }
+.slider-hero a:nth-child(3){ animation-delay: 8s; }
+.slider-hero a:nth-child(4){ animation-delay: 12s; }
+
+/* Image fills the slide */
+.slider-hero img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  display: block;
+}
 
     @keyframes slideShow {
       0%{ opacity:0; transform: scale(1.02); }
