--- a/index.html
+++ b/index.html
@@ -125,10 +125,12 @@
     /* Slider hero */
 .slider-hero {
   position: relative;
+  width: 100%;
+  height: 100svh; 
+  min-height: 420px;
   overflow: hidden;
-  height: min(60vh, 720px);
-  max-height: 800px;
 }
+
 
 /* Each anchor is a slide */
 .slider-hero a {
