--- a/index.html
+++ b/index.html
@@ -132,14 +132,17 @@
 }
 
 
-/* Each anchor is a slide */
-.slider-hero a {
+
+    .slider-hero a {
   position: absolute;
   inset: 0;
   display: block;
+  width: 100%;
+  height: 100%;
   opacity: 0;
   animation: slideShow 16s infinite;
 }
+
 
 /* Animate anchors, NOT images */
 .slider-hero a:nth-child(1){ animation-delay: 0s; }
