--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
   animation: slideShow 16s infinite;
 }
 
+.slider-hero img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  display: block;
+}
 
 /* Animate anchors, NOT images */
 .slider-hero a:nth-child(1){ animation-delay: 0s; }
