--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     <h2>Think it Summit 2025</h2>
     <div class="summit-card">
       <img src="assets/slide4.jpg" alt="Summit" class="summit-image">
-      <div class="info-card"><img src="assets/summit.jpg" alt="Summit info" class="info-image"></div>
+      <div class="info-card">  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdiCgYE-liW0OMZv0MnLteqD8qzvF5FWq2gUFvcAVvp60gihA/viewform"><img src="assets/thinkit2.jpeg" alt="Summit info" class="info-image"></a></div>
     </div>
   </section>
 
