--- a/index.html
+++ b/index.html
@@ -330,9 +330,11 @@
   </section>
 
   <section class="summit-section" id="summit-highlight">
-    <h2>Think it Summit 2025</h2>
+    <h2>Think it Summit 2026</h2>
     <div class="summit-card">
-      <img src="assets/slide4.jpg" alt="Summit" class="summit-image">
+           <a href="https://docs.google.com/forms/d/e/1FAIpQLScAmrgT1u8O3_6HVsZ2DCmKdIZd3jKo2nFHOGTjXUOYNSAPTw/viewform">
+<img src="assets/thinkit.jpeg" alt="Summit" class="summit-image"></a>
+      
       <div class="info-card">  <a href="https://docs.google.com/forms/d/e/1FAIpQLSdiCgYE-liW0OMZv0MnLteqD8qzvF5FWq2gUFvcAVvp60gihA/viewform"><img src="assets/thinkit2.jpeg" alt="Summit info" class="info-image"></a></div>
     </div>
   </section>
